--- a/index.html
+++ b/index.html
@@ -24,15 +24,46 @@
         <button id="jsSave">Save</button>
       </div>
       <div class="controls__colors" id="jsColors">
-        <div class="controls__color" style="background-color:#2c2c2c;"></div>
-        <div class="controls__color" style="background-color:#ffffff;"></div>
-        <div class="controls__color" style="background-color:#EA2027;"></div>
-        <div class="controls__color" style="background-color:#fd9644;"></div>
-        <div class="controls__color" style="background-color:#fed330;"></div>
-        <div class="controls__color" style="background-color:#009432;"></div>
-        <div class="controls__color" style="background-color:#0652DD;"></div>
-        <div class="controls__color" style="background-color:#1B1464;"></div>
-        <div class="controls__color" style="background-color:#be2edd;"></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#2c2c2c;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#EA3D10;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#55AF7A;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#2A57A3"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#EAD25B;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#C7302A;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#BAD332;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#E8B0BD;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#E4DBD2;"
+        ></div>
+        <div
+          class="controls__color jsColor"
+          style="background-color:#B0B5AC;"
+        ></div>
       </div>
     </div>
     <script src="app.js"></script>
